--- a/Maracutaia/home/templates/base.html
+++ b/Maracutaia/home/templates/base.html
@@ -12,7 +12,7 @@
 {% load staticfiles %}
     <!-- Bootstrap core CSS -->
     <link rel="icon" href="{% static '/app/img/bigode.ico' %}"/>
-    <link rel="stylesheet" href="{% static '/app/content/style1.css' %}" />
+    <link rel="stylesheet" href="{% static '/app/content/style2.css' %}" />
     <link rel="stylesheet" href="{% static '/app/content/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'app/content/ie10-viewport-bug-workaround.css' %}" />
     <link rel="stylesheet" href="{% static '/app/content/navbar.css' %}" />
@@ -23,16 +23,16 @@
     <script href="{% static '/app/scripts/ie10-viewport-bug-workaround.js' %}"></script>
     <style type="text/css">
         body {
-            background-image: url('../../static/app/img/fundo1.jpg');
+            background-image: url('../../static/app/img/fundo2.jpg');
             background-repeat: no-repeat;
             background-size:cover;
             background-position:center;
-            background-color: #000000;
-            color: #999791;
+            background-color: #ffffff;
+            color: #ffffff;
         }
 
         footer {
-            color:#999791;
+            color:#ffffff;
         }
     </style>
 
@@ -64,7 +64,7 @@
    
    </div>
         <footer>
-            <center>Cosa Nostra Application &copy; 2017</center>
+            <center>Maracutaia Application &copy; 2017</center>
         </footer>
     <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
