--- a/Maracutaia/mesas/templates/detalhe.html
+++ b/Maracutaia/mesas/templates/detalhe.html
@@ -1,7 +1,7 @@
 ﻿{% extends 'base.html' %}
 {% block body %}
     <div class="myjumbotron jumbotron">
-        Caixa
+        <h2>Numero: </h2>
+        <h2>{{numero}}</h2>
     </div>
-
 {% endblock %}
