--- a/Maracutaia/pedidos/templates/pedidos.html
+++ b/Maracutaia/pedidos/templates/pedidos.html
@@ -1,7 +1,7 @@
 ﻿{% extends 'base.html' %}
 {% block body %}
     <div class="myjumbotron jumbotron">
-        Caixa
+        Pedidos
     </div>
 
 {% endblock %}
