--- a/Maracutaia/app/static/app/content/style9.css
+++ b/Maracutaia/app/static/app/content/style9.css
@@ -8,7 +8,7 @@
     background: linear-gradient(to bottom, #8a8888, #3b3b3b); /*Standard*/
     border-bottom-style: solid;
     border-bottom-width: 3px;
-    border-color: #fff;
+    border-color: #82c541;
     margin-bottom: 19px;
 }
 
@@ -20,6 +20,7 @@
     background: -moz-linear-gradient(top,#8a8888,#3b3b3b); /*Fx 3.6-15*/
     background: linear-gradient(to bottom, #8a8888, #3b3b3b); /*Standard*/
     min-height: 400px;
+    color: #7b6d3e;
 }
 
 .cor{
@@ -42,7 +43,17 @@
 	color:#bcbcba;
 }
 
-.radious {
-    border-radius: 15px;
+input[type=image] {
+    color: aquamarine;
 }
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
