--- a/Maracutaia/home/templates/home/home.html
+++ b/Maracutaia/home/templates/home/home.html
@@ -1,7 +1,5 @@
 ﻿{% extends 'base.html' %}
 {% block body %}
-    <div class="myjumbotron jumbotron">
-        Caixa
-    </div>
+        <h2>{{msg}}</h2>
 
 {% endblock %}
