--- a/Maracutaia/pedidos/templates/pedidos.html
+++ b/Maracutaia/pedidos/templates/pedidos.html
@@ -1,7 +1,20 @@
 ﻿{% extends 'base.html' %}
 {% block body %}
-    <div class="myjumbotron jumbotron">
-        Pedidos
-    </div>
-
+    <h3>Mesas:</h3>
+        <form method="get" action="addpedidos" >
+            <div id="navbar" class="collapse navbar-collapse ">
+            <ul class="nav navbar-nav">
+                <li><input type="image" name="mesa" src="../../static/app/img/n1.png" value="1" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n2.png" value="2" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n3.png" value="3" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n4.png" value="4" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n5.png" value="5" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n6.png" value="6" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n7.png" value="7" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n8.png" value="8" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n9.png" value="9" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n10.png" value="10" /></li>
+            </ul>
+        </div>
+        </form>
 {% endblock %}
