--- a/Maracutaia/mesas/templates/mesas.html
+++ b/Maracutaia/mesas/templates/mesas.html
@@ -1,17 +1,19 @@
 ﻿{% extends 'base.html' %}
 {% block body %}
-    <div class="myjumbotron jumbotron">
         <form method="get" action="detalhe" >
-            <button type="submit" value="1" name="mesa"><img src="../../static/app/img/n1.png" /></button>
-            <button type="submit" value="2" name="mesa"><img src="../../static/app/img/n2.png" /></button>
-            <button type="submit" value="3" name="mesa"><img src="../../static/app/img/n3.png" /></button>
-            <button type="submit" value="4" name="mesa"><img src="../../static/app/img/n4.png" /></button>
-            <button type="submit" value="5" name="mesa"><img src="../../static/app/img/n5.png" /></button>
-            <button type="submit" value="6" name="mesa"><img src="../../static/app/img/n6.png" /></button>
-            <button type="submit" value="7" name="mesa"><img src="../../static/app/img/n7.png" /></button>
-            <button type="submit" value="8" name="mesa"><img src="../../static/app/img/n8.png" /></button>
-            <button type="submit" value="9" name="mesa"><img src="../../static/app/img/n9.png" /></button>
-            <button type="submit" value="10" name="mesa"><img src="../../static/app/img/n10.png" /></button>    
+            <div id="navbar" class="collapse navbar-collapse ">
+            <ul class="nav navbar-nav">
+                <li><input type="image" name="mesa" src="../../static/app/img/n1.png" value="1" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n2.png" value="2" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n3.png" value="3" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n4.png" value="4" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n5.png" value="5" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n6.png" value="6" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n7.png" value="7" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n8.png" value="8" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n9.png" value="9" /></li>
+                <li><input type="image" name="mesa" src="../../static/app/img/n10.png" value="10" /></li>
+            </ul>
+        </div>
         </form>
-    </div>
 {% endblock %}
