--- a/Maracutaia/outros/templates/outros.html
+++ b/Maracutaia/outros/templates/outros.html
@@ -1,7 +1,8 @@
 ﻿{% extends 'base.html' %}
 {% block body %}
-    <div class="myjumbotron jumbotron">
-        Outros
-    </div>
-
+        <div id="navbar" class="collapse navbar-collapse ">
+            <ul class="nav navbar-nav">
+                <li><a href="addproduto"><img src="../../static/app/img/addproduto.png" /><center>Adicionar Produto</center></a></li>                
+            </ul>
+        </div>
 {% endblock %}
