--- a/Maracutaia/mesas/templates/detalhe.html
+++ b/Maracutaia/mesas/templates/detalhe.html
@@ -5,7 +5,7 @@
     <tr>
         <th>Produto</th>
         <th>Quantidade</th>
-        <th>Valor Uni</th>
+        <th>Valor Un</th>
         <th>Total</th>
     </tr>
     <tr>
@@ -15,4 +15,8 @@
         <td>$100</td>
     </tr>
 </table>
+<br />
+<br />
+<button>Pré-fechar</button>
+<button>fechar</button>
 {% endblock %}
