--- a/Maracutaia/pedidos/templates/pedidos.html
+++ b/Maracutaia/pedidos/templates/pedidos.html
@@ -1,20 +1,10 @@
 ﻿{% extends 'base.html' %}
 {% block body %}
-    <h3>Mesas:</h3>
-        <form method="get" action="addpedidos" >
-            <div id="navbar" class="collapse navbar-collapse ">
-            <ul class="nav navbar-nav">
-                <li><input type="image" name="mesa" src="../../static/app/img/n1.png" value="1" /></li>
-                <li><input type="image" name="mesa" src="../../static/app/img/n2.png" value="2" /></li>
-                <li><input type="image" name="mesa" src="../../static/app/img/n3.png" value="3" /></li>
-                <li><input type="image" name="mesa" src="../../static/app/img/n4.png" value="4" /></li>
-                <li><input type="image" name="mesa" src="../../static/app/img/n5.png" value="5" /></li>
-                <li><input type="image" name="mesa" src="../../static/app/img/n6.png" value="6" /></li>
-                <li><input type="image" name="mesa" src="../../static/app/img/n7.png" value="7" /></li>
-                <li><input type="image" name="mesa" src="../../static/app/img/n8.png" value="8" /></li>
-                <li><input type="image" name="mesa" src="../../static/app/img/n9.png" value="9" /></li>
-                <li><input type="image" name="mesa" src="../../static/app/img/n10.png" value="10" /></li>
-            </ul>
-        </div>
-        </form>
+<div id="navbar" class="collapse navbar-collapse ">
+    <ul class="nav navbar-nav">
+        <li><a href="/mesas"><img src="../../static/app/img/abrirmesa.png" /><center>Abrir Mesa</center></a></li>
+        <li><a href="/pedidos"><img src="../../static/app/img/addpedido.png" /><center>Add Produto</center></a></li>
+        <li><a href="/entregas"><img src="../../static/app/img/fecharmesa.png" /><center>Fechar Mesa</center></a></li>
+    </ul>
+</div>
 {% endblock %}
