--- a/Maracutaia/pedidos/templates/pedidos.html
+++ b/Maracutaia/pedidos/templates/pedidos.html
@@ -2,9 +2,9 @@
 {% block body %}
 <div id="navbar" class="collapse navbar-collapse ">
     <ul class="nav navbar-nav">
-        <li><a href="/mesas"><img src="../../static/app/img/abrirmesa.png" /><center>Abrir Mesa</center></a></li>
-        <li><a href="/pedidos"><img src="../../static/app/img/addpedido.png" /><center>Add Produto</center></a></li>
-        <li><a href="/entregas"><img src="../../static/app/img/fecharmesa.png" /><center>Fechar Mesa</center></a></li>
+        <li><a href="abrir"><img src="../../static/app/img/abrirmesa1.png" /><center>Abrir Mesa</center></a></li>
+        <li><a href="selecionaMesa"><img src="../../static/app/img/addpedido1.png" /><center>Add Produto</center></a></li>
+        <li><a href="fechar"><img src="../../static/app/img/fecharmesa1.png" /><center>Fechar Mesa</center></a></li>
     </ul>
 </div>
 {% endblock %}
